--- a/src/clients/css/Home.module.css
+++ b/src/clients/css/Home.module.css
@@ -15,10 +15,10 @@ body{
 .firstSection{
     display: flex;
     align-items: center;
-    justify-content: space-evenly;
-    width:100vh;
+    justify-content: baseline;
+    width:100vw;
+    height:100vh;
     padding-top: 2vh;
-    padding-bottom: 3vh;
 }
 
 .homeTitle{
@@ -26,8 +26,11 @@ body{
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  align-self: flex-start;
+  margin-top:10vh;
   margin-left: 8vw;
-  height: 500px;
+  height: 50%;
+  width: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
